objects/ELV_Quote_Term_Version__c/ELV_Quote_Term_Version__c.object-meta.xml
<CustomObject>
    <label>Quote Term Version</label>
    <nameField>
        <displayFormat>QTV-{00000}</displayFormat>
        <label>Quote Term Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Term Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>