objects/ELV_Quote_Term_Version__c/fields/CPQ_Version__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Version__c</fullName>
    <inlineHelpText>Used to track each new quote term record back to its corresponding CPQ record.</inlineHelpText>
    <label>CPQ Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>