objects/ELV_Quote_Term_Version__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <inlineHelpText>Determines the order in which the term should be published.</inlineHelpText>
    <label>Display Order</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>