objects/ELV_Quote_Term_Version__c/fields/ELV_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>ELV_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>appro__Approval__c</referenceTo>
    <relationshipLabel>Quote Term Versions Approved</relationshipLabel>
    <relationshipName>QuoteTermVersionsApproved</relationshipName>
    <type>Lookup</type>
</CustomField>