objects/ELV_Quote_Term_Version__c/fields/ELV_Source_Quote_Term_Version__c.field-meta.xml
<CustomField>
    <fullName>ELV_Source_Quote_Term_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Only populated when Version Type = Quote Instance, this field links a quote-specific Term Version back to the Source record from which it was copied.</inlineHelpText>
    <label>Source Quote Term Version</label>
    <referenceTo>ELV_Quote_Term_Version__c</referenceTo>
    <relationshipLabel>Quote Term Versions</relationshipLabel>
    <relationshipName>Quote_Term_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>