objects/ELV_Quote_Term_Version__c/fields/ELV_Template_Type__c.field-meta.xml
<CustomField>
    <fullName>ELV_Template_Type__c</fullName>
    <inlineHelpText>Used to categorize term versions based on applicability to Direct, Partner, Marketplace, or License Schedule template.</inlineHelpText>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>License Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>