objects/ELV_Quote_Term_Version__c/fields/Instance_Quote__c.field-meta.xml
<CustomField>
    <fullName>Instance_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Only populated when Version Type = Quote Instance, this field links a quote to its related Term Versions. &quot;Source&quot; Quote Term Versions will not be linked to quotes, but when applicable to a quote, a copy of type &quot;Quote Instance&quot; will be created automatically.</inlineHelpText>
    <label>Instance Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Quote Term Versions</relationshipLabel>
    <relationshipName>Quote_Term_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>