objects/ELV_Quote_Term_Version__c/fields/Lineage_Root__c.field-meta.xml
<CustomField>
    <fullName>Lineage_Root__c</fullName>
    <description>Elevate - The Id of the first version in this version&apos;s supersede chain. Set by the Activate action when a Source version is superseded, and carried forward unchanged through every later supersede, so one value identifies the language across all of its revisions. Blank means the record is its own root. The quote sync compares this rather than the record Id, which is what lets a Custom Quote Instance stay attached to a quote after its source version has been superseded.</description>
    <inlineHelpText>Identifies this term version across all of its revisions. Set automatically - do not edit.</inlineHelpText>
    <label>Lineage Root</label>
    <length>18</length>
    <type>Text</type>
</CustomField>