objects/ELV_Quote_Term_Version__c/fields/Previous_Version__c.field-meta.xml
<CustomField>
    <fullName>Previous_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Elevate - On a Source version created by the Activate action, the version it superseded. Populated only when the formula or body actually changed, so following this lookup back gives the full edit history of the language.</description>
    <inlineHelpText>If this source term is an updated version of a source term, this points to the previous version. Blank on the first version of a term.</inlineHelpText>
    <label>Previous Version</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ELV_Quote_Term_Version__c.Version_Type__c</field>
            <operation>equals</operation>
            <value>Previous Source Version</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ELV_Quote_Term_Version__c</referenceTo>
    <relationshipLabel>Superseded By</relationshipLabel>
    <relationshipName>Superseded_By</relationshipName>
    <type>Lookup</type>
</CustomField>