objects/ELV_Quote_Term_Version__c/fields/Quote_Term__c.field-meta.xml
<CustomField>
    <fullName>Quote_Term__c</fullName>
    <inlineHelpText>Links the version to its parent term. Used for organizing terms: the Quote Term object to group variants by a single legal/business purpose, with versions as related records.</inlineHelpText>
    <label>Quote Term</label>
    <referenceTo>ELV_Quote_Term__c</referenceTo>
    <relationshipLabel>Quote Term Versions</relationshipLabel>
    <relationshipName>Quote_Term_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>