objects/ELV_Quote_Term_Version__c/fields/Rendered_Body__c.field-meta.xml
<CustomField>
    <fullName>Rendered_Body__c</fullName>
    <description>The term body for this quote with its merge fields resolved. Written by the Sync Quote Terms action on every run and published to the quote. Term Version Body keeps the raw merge fields and remains the record of the language itself.</description>
    <inlineHelpText>Read only. The body as it will print on this quote, with merge fields replaced by the quote&apos;s values.</inlineHelpText>
    <label>Rendered Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>