objects/ELV_Quote_Term_Version__c/fields/Template_Section__c.field-meta.xml
<CustomField>
    <fullName>Template_Section__c</fullName>
    <inlineHelpText>Used to select the section of the template the term appears in.</inlineHelpText>
    <label>Template Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Body</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>