objects/ELV_Quote_Term_Version__c/fields/Template_Types__c.field-meta.xml
<CustomField>
    <fullName>Template_Types__c</fullName>
    <description>Used in apex action query to narrow subset of queried term version records by applicable template types.</description>
    <inlineHelpText>Select the template types applicable to this term version.</inlineHelpText>
    <label>Template Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>License Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>