objects/ELV_Quote_Term_Version__c/fields/Term_Title__c.field-meta.xml
<CustomField>
    <fullName>Term_Title__c</fullName>
    <formula>Quote_Term__r.Term_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Title</label>
    <type>Text</type>
</CustomField>