objects/ELV_Quote_Term_Version__c/fields/Term_Version_Body__c.field-meta.xml
<CustomField>
    <fullName>Term_Version_Body__c</fullName>
    <inlineHelpText>Contains the formatted/rich text that comprises the body of the term to be published on the quote document.</inlineHelpText>
    <label>Term Version Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>