objects/ELV_Quote_Term_Version__c/fields/Term_Version_Title__c.field-meta.xml
<CustomField>
    <fullName>Term_Version_Title__c</fullName>
    <label>Term Version Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>