objects/ELV_Quote_Term_Version__c/fields/Tested_Formula__c.field-meta.xml
<CustomField>
    <fullName>Tested_Formula__c</fullName>
    <inlineHelpText>Contains a formula intended to evaluate to TRUE or FALSE if tested against a quote.</inlineHelpText>
    <label>Tested Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>