objects/ELV_Quote_Term_Version__c/fields/Version_Type__c.field-meta.xml
<CustomField>
    <fullName>Version_Type__c</fullName>
    <inlineHelpText>Records with &quot;Source&quot; Version Type are intended to be the templatized/standard/default language for each term. The &quot;Quote Instance&quot; Version Type indicates a record that is a clone of a Source record that was created for a specific quote.</inlineHelpText>
    <label>Version Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Source</fullName>
            </value>
            <value>
                <fullName>Quote Instance</fullName>
            </value>
            <value>
                <fullName>Custom Quote Instance</fullName>
            </value>
            <value>
                <fullName>Removed Quote Instance</fullName>
            </value>
            <value>
                <fullName>Previous Source Version</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>