objects/ELV_Quote_Term_Version__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Tested_Formula__c</columns>
    <columns>Version_Type__c</columns>
    <columns>Template_Types__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>