objects/ELV_Quote_Term_Version__c/listViews/All_Source_Terms.listView-meta.xml
<ListView>
    <fullName>All_Source_Terms</fullName>
    <columns>NAME</columns>
    <columns>Display_Order__c</columns>
    <columns>CPQ_Version__c</columns>
    <columns>Term_Title__c</columns>
    <columns>Active__c</columns>
    <columns>Template_Types__c</columns>
    <columns>Tested_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Version_Type__c</field>
        <operation>equals</operation>
        <value>Source</value>
    </filters>
    <label>All Source Terms</label>
</ListView>