objects/ELV_Quote_Term_Version__c/listViews/All_Source_Terms_Body.listView-meta.xml
<ListView>
    <fullName>All_Source_Terms_Body</fullName>
    <columns>NAME</columns>
    <columns>Quote_Term__c</columns>
    <columns>Term_Title__c</columns>
    <columns>Template_Types__c</columns>
    <columns>Tested_Formula__c</columns>
    <columns>Term_Version_Body__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Version_Type__c</field>
        <operation>equals</operation>
        <value>Source</value>
    </filters>
    <label>All Source Terms - Formula &amp; Body</label>
</ListView>