objects/ELV_Quote_Term_Version__c/listViews/Source_Terms_Above_Quote_Line_Table.listView-meta.xml
<ListView>
    <fullName>Source_Terms_Above_Quote_Line_Table</fullName>
    <booleanFilter>1 AND (2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8)</booleanFilter>
    <columns>Quote_Term__c</columns>
    <columns>NAME</columns>
    <columns>CPQ_Version__c</columns>
    <columns>Term_Title__c</columns>
    <columns>Version_Type__c</columns>
    <columns>Active__c</columns>
    <columns>Display_Order__c</columns>
    <columns>Template_Types__c</columns>
    <columns>Tested_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Version_Type__c</field>
        <operation>equals</operation>
        <value>Source</value>
    </filters>
    <filters>
        <field>CPQ_Version__c</field>
        <operation>equals</operation>
        <value>QT-0000</value>
    </filters>
    <filters>
        <field>CPQ_Version__c</field>
        <operation>equals</operation>
        <value>QT-0001</value>
    </filters>
    <filters>
        <field>CPQ_Version__c</field>
        <operation>equals</operation>
        <value>QT-0002</value>
    </filters>
    <filters>
        <field>CPQ_Version__c</field>
        <operation>equals</operation>
        <value>QT-6068</value>
    </filters>
    <filters>
        <field>CPQ_Version__c</field>
        <operation>equals</operation>
        <value>QT-6069</value>
    </filters>
    <filters>
        <field>CPQ_Version__c</field>
        <operation>equals</operation>
        <value>QT-6070</value>
    </filters>
    <filters>
        <field>CPQ_Version__c</field>
        <operation>equals</operation>
        <value>QT-6071</value>
    </filters>
    <label>Source Terms - Above Quote Line Table</label>
</ListView>